--- a/Davs-UI/index.html
+++ b/Davs-UI/index.html
@@ -130,7 +130,7 @@
                 <h2>We're happy to hear from you</h2>
             </div>
             <div class="row">
-                <form method="post" action="#" class="contact-form">
+                <form method="get" action="https://backdavs.khachoyan.org/davs/api/sendEmail" class="contact-form">
                     <div class="row">
                         <div class="col span-1-of-3">
                             <label for="name">Name</label>
